--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 02</title>
-    <!-- font -->
+    <!--Embed font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -21,29 +21,36 @@
 
 <body style="height: 100000px;">
     <!-- Header -->
-    <header class="fixed-header">
-        <div class="content">
-            <div class="navbar row">
+    <header class="header fixed">
+        <div class="main-content">
+            <div class="body">
                 <!-- logo -->
                 <a href="#" class="logo">
                     <p>Lesson.</p>
                 </a>
+
                 <!-- navigation -->
-                <ul class="nav row">
-                    <li>
-                        <a href="#!">Home</a>
-                    </li>
-                    <li>
-                        <a href="#!">Courses</a>
-                    </li>
-                    <li>
-                        <a href="#!">Pricing</a>
-                    </li>
-                    <li>
-                        <a href="#!">Review</a>
-                    </li>
-                </ul>
-                <a href="#!" class="btn">Sign Up</a>
+                <nav class="nav">
+                    <ul>
+                        <li>
+                            <a href="#!">Home</a>
+                        </li>
+                        <li>
+                            <a href="#!">Courses</a>
+                        </li>
+                        <li>
+                            <a href="#!">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#!">Review</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <!-- Action -->
+                <div class="action">
+                    <a href="#!" class="btn sign-up-btn">Sign Up</a>
+                </div>
             </div>
         </div>
     </header>
