--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
 
-    <body style="height: 100000px">
+    <body>
         <!-- Header -->
         <header class="header fixed">
             <div class="main-content">
