--- a/cart.html
+++ b/cart.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News</title>
+    <title>Cart</title>
 </head>
 <body>
-    <h1>This is news</h1>
+    <h1>This is cart</h1>
 </body>
 </html>
